[package]
name = "cubulous"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

[dependencies]
bevy = "0.6" # make sure this is the latest version
config = "0.12"

[env]
CONFIG_DIR = "configs"
CUBE_CONFIG = "cube_storage.json"

[[example]]
name = "basic_render"
path = "examples/basic_render/basic_render.rs"